--- a/contact.html
+++ b/contact.html
@@ -81,8 +81,8 @@
         <h2>Get in Touch</h2>
         <p>Have questions? Reach out to us.</p>
         <p>Email: <a href="mailto:ewastemanagement@gmail.com">ewastemanagement@gmail.com</a></p>
-        <p>Phone: +91 98765 43210</p>
-        <p>Address: 123 Green Street, Eco City, India</p>
+        <p>Phone: +91 72071 05126</p>
+        <p>Address: 123 456 Hyderabad, India</p>
         
         <div class="team-contact">
             <h3>Team Contacts</h3>
