--- a/team.html
+++ b/team.html
@@ -61,14 +61,14 @@
     
     <div class="team-container">
         <div class="team-member">
-            <img src="varun1.jpg" alt="Varun Malthumkar">
+            <img src="varucccn1.jpg" alt="Varun Malthumkar">
             <h3>Varun Malthumkar</h3>
             <p>Project Leader</p>
             <p>Varun oversees the entire project, ensuring smooth execution and innovation.</p>
         </div>
         
         <div class="team-member">
-            <img src="sairam2.jpg" alt="Sairam">
+            <img src="saircccam2.jpg" alt="Sairam">
             <h3>Sairam</h3>
             <p>Backend Developer</p>
             <p>Sairam is responsible for the backend development using Django to power the platform.</p>
