--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
         <h2>Meet Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="varun.jpg" alt="Varun Malthumkar">
+                <img src="varun111.jpg" alt="Varun Malthumkar">
                 <h3>Varun Malthumkar</h3>
                 <p>Project Leader</p>
                 <p>Varun oversees the entire project, ensuring smooth execution and innovation.</p>
             </div>
             <div class="team-member">
-                <img src="sairam.jpg" alt="Sairam">
+                <img src="sairam111.jpg" alt="Sairam">
                 <h3>Sairam</h3>
                 <p>Backend Developer</p>
                 <p>Sairam is responsible for the backend development using Django to power the platform.</p>
