--- a/pickup.html
+++ b/pickup.html
@@ -87,6 +87,11 @@
             <textarea id="address" name="address" rows="3" required></textarea>
             
             <button type="submit">Request Pickup</button>
+            <div class="service">
+    <h3>E-Waste Pickup</h3>
+    <p>We collect and safely dispose of your old electronics.</p>
+    <a href="request.html" class="btn">Request Pickup</a>
+</div>
         </form>
         
         <div class="map-container">
