--- a/pickup.html
+++ b/pickup.html
@@ -84,7 +84,7 @@
         <h2>Request an E-Waste Pickup</h2>
         <p>Fill in your details and schedule a pickup for your e-waste.</p>
         
-        <form action="#" method="post">
+        <form action="#reqs.html" method="post">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
             
